Idle service suspend fix, calendar day header alignment fix

--- a/style/calendar.css
+++ b/style/calendar.css
@@ -13,8 +13,6 @@
 .calendar-day-selected {
     background-color: var(--primary);
     border-radius: apply(radius-m);
-    min-width: 36px;
-    min-height: 36px;
 }
 
 .calendar-day-selected *{
